--- a/agent/agent-code.ipynb
+++ b/agent/agent-code.ipynb
@@ -164,9 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Reinforcement learning agent**\n",
-    "\n",
-    "Replace this with your own agent - I recommend starting with TD3 (lecture 8)"
+    "**Reinforcement learning agent**"
    ]
   },
   {
